# tauri-plugin-mqtt

./: Cargo.toml  README.md  build.rs  package.json
example/tauri-app/src-tauri/: Cargo.toml
example/tauri-app/src-tauri/capabilities/: default.json
example/tauri-app/src-tauri/src/: lib.rs
example/tauri-app/src/routes/: +page.svelte
permissions/: default.toml
permissions/autogenerated/: reference.md
permissions/schemas/: schema.json
src/: commands.rs  desktop.rs  lib.rs  models.rs  mqtt_options.rs
webview-src/: index.ts
